--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 .main-container {
-  background-image: url("galaxy-night-landscape.jpg");
+  background-image: url("night.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
