--- a/style.css
+++ b/style.css
@@ -16,8 +16,14 @@ body {
   overflow: hidden;
 }
 
+.header {
+  height: 5.5rem;
+  position: relative;
+}
+
 .main-container {
   background-image: url("night.jpg");
+  opacity: 0.95;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -26,11 +32,16 @@ body {
   height: 100%;
 }
 
+form {
+  height: 100%;
+}
+
 .form-group {
   float: right;
-  height: 6%;
+  height: 80%;
   position: relative;
   margin: 2.5rem 3.5rem 0 0;
+  height: 6rem;
 }
 
 .submit-btn {
